--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -44,6 +44,13 @@
 
 .nav h5{
 	padding-left: 10px;
+	font-weight: bold;
+	margin-top: 25px;
+}
+
+.navsection {
+	border-bottom: dashed 1px #ccc;
+	border-top: dashed 1px #ccc;
 }
 
 .nav a {
